--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'French literature -- 19th century'
 - !lcc 'PQ'
+- GITenberg
 title: 'Midi à quatorze heures
 
   Histoire d''un voisin—Voyage dans Paris—Une visite à
